--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <body>
 <h1>Hello World!</h1>
-<p>This is a Cydia repo!</p>
+<p>Welcome to myTweaks.</p>
+  <p>We have detected you are not in Cydia/Sileo/Zebra..</p>
 </body>
 </html>
