--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
 <h1>Hello World!</h1>
 <p>Welcome to myTweaks.</p>
   <p>We have detected you are not in Cydia/Sileo/Zebra..</p>
+  <p>Go to Desktop Site <a href="./desktop">here!</a></p>
 </body>
 </html>
