--- a/desktop/index.html
+++ b/desktop/index.html
@@ -1,4 +1,4 @@
 <!DOCTYPE html>
 <h1>myTweaks REPO. Add it to your Jailbroken iDevice package manager (Cydia, Sileo, Zebra)<h1>
 <a href="https://deloxgithub.github.io/repo">Click for homepage</a>
-<p>Add: https://deloxgithub.github.io/repo/ </p>
+<p>Add: deloxgithub.github.io/repo </p>
