--- a/desktop/index.html
+++ b/desktop/index.html
@@ -2,3 +2,4 @@
 <h1>myTweaks REPO. Add it to your Jailbroken iDevice package manager (Cydia, Sileo, Zebra)<h1>
 <a href="https://deloxgithub.github.io/repo">Click for homepage</a>
 <p>Add: deloxgithub.github.io/repo </p>
+<p>DOWNLOAD OUR TWEAKS HERE! <a href="../download"/index.html>Click me .-.</a>
